enterprise/operator/pkg/lb/testdata/lbservice_translation/13-https-h2-only/output-t1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: "100.64.0.100"
    lbipam.cilium.io/sharing-key: "lb-1"
    service.cilium.io/forwarding-mode: dsr
    service.cilium.io/health-check-bgp-advertise-threshold: "1"
    service.cilium.io/health-check-http-method: GET
    service.cilium.io/health-check-http-path: /health
    service.cilium.io/health-check-probe-interval: 15s
    service.cilium.io/health-check-probe-timeout: 5s
    service.cilium.io/health-check-quarantine-timeout: 0s
    service.cilium.io/health-check-threshold-healthy: "1"
    service.cilium.io/health-check-threshold-unhealthy: "1"
    service.cilium.io/node: t1
    service.cilium.io/type: "LoadBalancer"
  namespace: default
  name: lbfe-lb-1
spec:
  allocateLoadBalancerNodePorts: false
  ports:
    - name: http
      port: 80
      protocol: TCP
  type: LoadBalancer
