enterprise/operator/pkg/lb/testdata/lbservice_translation/13-https-h2-only/output-t2-ciliumenvoyconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  namespace: default
  name: lbfe-lb-1
spec:
  nodeSelector:
    matchLabels:
      service.cilium.io/node: t2
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socketAddress:
          address: 100.64.0.100
          portValue: 80
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
            directSourcePrefixRanges:
              - addressPrefix: 172.18.0.0
                prefixLen: 32
              - addressPrefix: 172.18.0.1
                prefixLen: 32
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                generateRequestId: true
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.health_check
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      clusterMinHealthyPercentages:
                        backend_cluster_https_0:
                          value: 20
                      headers:
                        - name: :path
                          stringMatch:
                            exact: /health
                        - name: :method
                          stringMatch:
                            exact: GET
                        - name: user-agent
                          stringMatch:
                            prefix: cilium-probe/
                      passThroughMode: false
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppressEnvoyHeaders: true
                normalizePath: true
                mergeSlashes: true
                stripMatchingHostPort: true
                useRemoteAddress: true
                routeConfig: {}
                statPrefix: frontend_listener_healthcheck_http
        - filterChainMatch:
            serverNames:
              - foo.acme.io
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                codecType: HTTP2
                generateRequestId: false
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppressEnvoyHeaders: true
                normalizePath: true
                mergeSlashes: true
                stripMatchingHostPort: true
                useRemoteAddress: true
                rds:
                  routeConfigName: frontend_routeconfig_https
                statPrefix: frontend_listener_https
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                alpnProtocols:
                  - h2
                tlsCertificateSdsSecretConfigs:
                  - name: /default-test
                tlsParams: {}
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: cilium.bpf_metadata
          typedConfig:
            "@type": type.googleapis.com/cilium.BpfMetadata
      perConnectionBufferLimitBytes: 32768
      name: frontend_listener
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_https
      virtualHosts:
        - domains:
            - "foo.acme.io"
          name: frontend_virtualhost_https_0
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                prefix: /
              route:
                cluster: backend_cluster_https_0
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      name: backend_cluster_https_0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      roundRobinLbConfig: {}
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_https_0
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.5
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.6
                    portValue: 8080
              loadBalancingWeight: 1
